Fix a Firefox-specific issue with the ProseMirror height being too squished

--- a/display/shared/styling/wod5e.less
+++ b/display/shared/styling/wod5e.less
@@ -73,7 +73,7 @@
 /* ProseMirror Alterations */
 prose-mirror {
   width: -webkit-fill-available;
-  height: -webkit-fill-available;
+  height: inherit;
 
   .editor-menu {
     height: 35px;
